--- a/package.json
+++ b/package.json
@@ -9,16 +9,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@faker-js/faker": "^8.0.2",
-    "axios": "^1.4.0",
-    "chai": "^4.3.7",
-    "mochawesome": "^7.1.3",
-    "properties-reader": "^2.2.0",
-    "rimraf": "^5.0.1"
-  },
-  "devDependencies": {
-    "mocha": "^10.2.0"
-  }
+  "license": "ISC"
 }
